# clickhouse-sql

./: .envrc  .gitignore  CMakeLists.txt  Justfile  LICENSE  LICENSE.md  README.md  flake.nix  pyproject.toml  setup.py  test_minimal_parser.py
DummyLib/: CMakeLists.txt  DummyLib.cpp  DummyLib.h
_pydef_nanobind/: module.cpp  nanobind_ClickHouseParsers.cpp
_stubs/clickhouse_sql/: __init__.py  __init__.pyi
nix/: clickhouse-parser.nix
patches/: clickhouse-config.patch  clickhouse-path-fix.patch  clickhouse-preload.patch
scripts/: generate_bindings.sh  litgen-generate.py
