[project]
name = "clickhouse-sql"
version = "0.0.1"
description = "Python bindings to the ClickHouse SQL parser"
authors = [
    {name = "Dorran Howell",email = "dorranh@appalachian.dev"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"

# TODO: Not sure if I actually need this dep
dependencies = [
    "numpy (>=2.2.5,<3.0.0)"
]

[dependency-groups]
dev = [
    "ruff>=0.11.6,<1.0.0",
    "pyright>=1.1.399,<2.0.0",
    "pytest>=8.3.5,<9.0.0",
    "cibuildwheel>=2.23.2,<3.0.0",
    "litgen@git+https://github.com/pthom/litgen",
    "scikit-build-core>=0.4.3",
    "nanobind>=2.8.0",
]

[build-system]
requires = [
    "scikit-build-core>=0.4.3",
    "nanobind>=2.8.0",
]

build-backend = "scikit_build_core.build"

[tool.scikit-build]
build-dir = "_skbuild"
cmake.args = []

wheel.expand-macos-universal-tags = true
wheel.packages = ["_stubs/clickhouse_sql"]

build.verbose = true
logging.level = "INFO"

[tool.ruff]
line-length = 100

[tool.ruff.format]
exclude = ["*.pyi"]
